--- a/poem26.html
+++ b/poem26.html
@@ -48,27 +48,21 @@
     </style>
 </head>
 <body>
-    <h1>Les tulipes</h1> <!-- Titre du poème -->
+    <h1>Le ciel et la fleur</h1> <!-- Titre du poème -->
     <p> 
-Les mains vides mais le cœur rempli <br>
-Je traverserais cette frontière t'offrir mes larmes <br>
-Je te vouerais des quatrains et des couplets d'amour emplis <br>
-Peut-être seront-ils ridicules mais tu y trouveras du charme <br> <br>
+Un jour je marchais dans les prés <br>
+Et je vis un ciel et celui-ci brillait <br>
+Il ne brillait pas de bleu ni de rouge <br>
+Il brillait de rose et déclamait un nom <br>
+C'est le beau nom d'une future épouse <br>
+C'est le beau nom d'une reine de renom <br> <br>
 
-Les mains vides mais l'amour entier <br>
-Je te donnerais mon temps et une promesse résolue <br>
-Des poèmes peu attrayants mais vers ton cœur orientés <br>
-Encore un vœu pieu vers toi dévolu <br> <br>
-
-Combien de vers ai-je jeté à tes pieds ? <br>
-Qui ramassera les repoussantes jachères <br>
-Que le poète a sacrifié sur l'autel de l'Aîmée ? <br>
-Ils ont disparu et il ne reste qu'un souvenir amer. <br> <br>
-
-Combien de fleurs jetterais-je à tes pieds ? <br>
-Tulipes, roses et orchidées magenta <br>
-Montrez-vous dignes de cette Main ornée <br> 
-Ornée de rosaces sublimes et de magnolias.
+Ô Rania, le fleuve avance et ne tarit pas <br>
+Il s'écoule et vit avec fracas <br>
+Comme mon amour il se magnifie à chaque  <br>
+Pas besoin de temps ni de printemps <br>
+Quand on admire et qu'on cultive une fleur <br>
+Quand on aime et qu'on se nourrit du cœur
     </p>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
