--- a/poems.html
+++ b/poems.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="poem-list">
+    <ul>
         <h1>Sommaire des Poèmes</h1>
         <ul class="poem-list">
         <li><a href="poem1.html">Au pied d'une feuille</a></li>
