--- a/poems.html
+++ b/poems.html
@@ -32,7 +32,6 @@
         <li><a href="poem19.html">Le spleen des étoiles</a></li>
         <li><a href="poem20.html">La dame de l'Alhambra</a></li>
         <li><a href="poem21.html">Poème inconnu n°2</a></li>
-        <li><a href="poem22.html">Le bouquet royal</a></li>
         <li><a href="poem23.html">La vieille femme</a></li>
         <li><a href="poem24.html">Le coeur du poète</a></li>
         <li><a href="poem25.html">Les tulipes</a></li>
@@ -44,5 +43,9 @@
 </ul>
         <a href="index.html" class="btn">Retour à l'accueil</a>
     </div>
+    <div class="poem long">
+    <h2>Poème 2</h2>
+    <li><a href="poem22.html">Le bouquet royal</a></li>
+</div>
 </body>
 </html>
