--- a/poem30.html
+++ b/poem30.html
@@ -48,8 +48,31 @@
     </style>
 </head>
 <body>
-    <h1>WIP</h1> <!-- Titre du poème -->
-    <p> blabla
+    <h1>Échos de ton absence</h1> <!-- Titre du poème -->
+    <p>O douce Rania, étoile de mes nuits, <br>
+Ton nom murmure au vent des mélodies infinies. <br>
+L'ombre de ton absence, comme un voile subtil, <br>
+Étreint mon cœur d’un froid, d’un silence hostile. <br> <br>
+
+Les jours s’étirent, pâles, sans ton éclat, <br>
+Le soleil lui-même semble baisser les bras. <br>
+Chaque fleur perd sa couleur, chaque ruisseau sa voix, <br>
+Depuis que ton regard ne guide plus mes pas. <br> <br>
+
+Que ne puis-je atteindre l’horizon où tu respires, <br>
+Là où les songes mêlent leurs soupirs aux zéphyrs ! <br>
+Les étoiles jalouses, qui t’éclairent de loin, <br>
+Me laissent dans l’ombre d’un amour sans témoin. <br> <br>
+
+Mais l’absence, cruelle, renforce mon ardeur, <br>
+Car dans l’écrin de l’âme, je garde ta lueur. <br>
+Rania, ô muse, entends ma plainte fidèle, <br>
+Reviens fleurir ma vie de ta beauté éternelle. <br> <br>
+
+Ainsi je t’attends, immobile et rêveur, <br>
+Comme le lac attend le reflet d’une fleur. <br>
+Et si l’éternité doit nous séparer encore, <br>
+Sache que ton absence est mon plus doux trésor.
     </p>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
