--- a/poems.html
+++ b/poems.html
@@ -40,7 +40,7 @@
         <li><a href="poem27.html">Poème inconnu n°3</a></li>
         <li><a href="poem28.html">Un poème pour Rania</a></li>
         <li><a href="poem29.html">L'impuissance du poète</a></li>
-        <li class="nouveau"><a href="poem30.html">WIP</a></li>
+        <li class="nouveau"><a href="poem30.html">Échos de ton absence</a></li>
 </ul>
 </div>
 </body>
