--- a/poem30.html
+++ b/poem30.html
@@ -46,10 +46,12 @@
             background-color: #555; /* Couleur légèrement plus claire au survol */
         }
     </style>
-</head>
+    </head>
+<body style="background-color: #f5f5f5; color: #333; font-family: 'Georgia', serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh;">
+    <div style="font-size: 20px; font-family: 'Times New Roman', serif; color: #444; line-height: 1.8; text-align: justify;">
 <body>
     <h1>Échos de ton absence</h1> <!-- Titre du poème -->
-    <p>O douce Rania, étoile de mes nuits, <br>
+    <p>Ô douce Rania, étoile de mes nuits, <br>
 Ton nom murmure au vent des mélodies infinies. <br>
 L'ombre de ton absence, comme un voile subtil, <br>
 Étreint mon cœur d’un froid, d’un silence hostile. <br> <br>
