--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
             Je vois en toi une femme, une épouse et si Dieu le veut, la future mère de mes enfants. Mais je veux aussi rendre hommage à l'enfant que tu as été. J'aimerais la couvrir d'amour et lui témoigner de la considération. J'en prendrai soin, c'est une promesse, et je te ferais vivre dans une paix qui te siéra parfaitement je l'espère. <br>
             <strong>Je t'aime Rania <3 </strong> 
     </div>
+    <a href="poems.html" class="btn">Voir mes poèmes dédiés à toi</a>
 </body>
 </html>
