--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     </div>
 
     <script>
-        function showHeartPage() {
-    const newWindow = window.open("", "_blank");
-
     newWindow.document.write(`
 <!DOCTYPE html>
 <html lang="fr">
@@ -99,5 +96,7 @@
     </div>
     <a href="poems.html" class="btn">Voir mes poèmes dédiés à toi</a>
 </body>
-<script>
-</html>
+        </html>
+    `);
+}
+        </script>
