--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="letter">
             <h1>À toi, mon amour</h1>
             <p>Mon cœur, cette lettre est pour toi...</p>
-            <button class="btn" id="openThis" onclick="showHeartPage()">Ouvre cela</button>
+            <a href="poems.html" class="btn" id="openThis">Ouvre cela</a>
         </div>
     </div>
 
@@ -98,5 +98,4 @@
 </body>
         </html>
     `);
-}
         </script>
