--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="letter">
             <h1>À toi, mon amour</h1>
             <p>Mon cœur, cette lettre est pour toi...</p>
-            <a href="poems.html" class="btn" id="openThis">Ouvre cela</a>
+            <a href="intermediaire.html" class="btn" id="openThis">Ouvre cela</a>
         </div>
     </div>
 
