--- a/poem22.html
+++ b/poem22.html
@@ -6,6 +6,31 @@
     <title>Poème 1</title>
     <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
     <style>
+        .poem-container {
+            max-height: 80vh; /* Définit la hauteur max de l'écran visible */
+            overflow-y: auto; /* Permet le défilement vertical */
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .poem-container::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .poem-container::-webkit-scrollbar-thumb {
+            background: #b0003a; /* Couleur de la barre */
+            border-radius: 10px;
+        }
+
+        .poem-container::-webkit-scrollbar-thumb:hover {
+            background: #ff69b4;
+        }
+
+        .poem-container::-webkit-scrollbar-track {
+            background: #f0f0f0;
+        }
         /* Styles spécifiques pour les pages de poèmes */
         body {
             background-color: #f5f5f5; /* Fond clair agréable */
@@ -48,9 +73,9 @@
     </style>
 </head>
 <body>
-    <h1>Lz bouquet royal</h1> <!-- Titre du poème -->
-    <p> 
-Une main sublime vient porter mon offrande <br>
+    <div class="poem-container">
+    <h1>Le bouquet royal</h1> <!-- Titre du poème -->
+    <p> Une main sublime vient porter mon offrande <br>
 Un bouquet blanc et vert empli de fleurs odorantes <br> <br>
 
 Callas j'écris votre nom. Soyez doux aux yeux de mon Aîmée <br>
@@ -77,6 +102,9 @@ Et ils ne seront jamais suffisants pour la couronner d'un diadème <br>
 Eh bien ! J'irais jusqu'à chez elle, et je la couronnerais moi-mème.
 🤍👑
     </p>
+    </div>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
 </body>
 </html>
+
+
