--- a/poems.html
+++ b/poems.html
@@ -40,7 +40,7 @@
         <!-- Ajout du conteneur scrollable -->
         <div class="poem-list-container">
             <ul class="poem-list">
-                <li><a href="poem1.html">Échos de ton absence</a></li>
+                <li><a href="poem1.html">[Nouveau]Échos de ton absence</a></li>
                 <li><a href="poem2.html">Aldébaran</a></li>
                 <li><a href="poem3.html">Une esquisse pour une reine</a></li>
                 <li><a href="poem4.html">Je ne t'aime pas</a></li>
