--- a/poem31.html
+++ b/poem31.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poème 1</title>
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers ton fichier CSS global -->
+    <style>
+        .poem-container {
+            max-height: 80vh; /* Définit la hauteur max de l'écran visible */
+            overflow-y: auto; /* Permet le défilement vertical */
+            padding: 20px;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
+        .poem-container::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .poem-container::-webkit-scrollbar-thumb {
+            background: #b0003a; /* Couleur de la barre */
+            border-radius: 10px;
+        }
+
+        .poem-container::-webkit-scrollbar-thumb:hover {
+            background: #ff69b4;
+        }
+
+        .poem-container::-webkit-scrollbar-track {
+            background: #f0f0f0;
+        }
+        /* Styles spécifiques pour les pages de poèmes */
+        body {
+            background-color: #f5f5f5; /* Fond clair agréable */
+            color: #333; /* Couleur du texte pour un bon contraste */
+            font-family: 'Georgia', serif; /* Police élégante et adaptée à un poème */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h1 {
+            font-weight: bold; /* Titre en gras */
+            margin-bottom: 20px; /* Espacement entre le titre et le texte */
+        }
+
+        p {
+            font-style: italic; /* Texte du poème en italique */
+            line-height: 1.6; /* Espacement des lignes pour améliorer la lisibilité */
+            text-align: center;
+            margin: 0 20px 30px; /* Marges latérales pour éviter les bords serrés */
+        }
+
+        a.btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4
+            color: #fff; /* Texte blanc */
+            text-decoration: none; /* Supprime le soulignement */
+            border-radius: 5px;
+            transition: background-color 0.3s ease; /* Animation pour le survol */
+        }
+
+        a.btn:hover {
+            background-color: #555; /* Couleur légèrement plus claire au survol */
+        }
+    </style>
+</head>
+<body>
+    <div class="poem-container">
+    <h1>Échos de ton absence</h1> <!-- Titre du poème -->
+    <p> Ô douce Rania, étoile de mes nuits, <br>
+Ton nom murmure au vent des mélodies infinies. <br>
+L'ombre de ton absence, comme un voile subtil, <br>
+Étreint mon cœur d’un froid, d’un silence hostile. <br> <br>
+
+Les jours s’étirent, pâles, sans ton éclat, <br>
+Le soleil lui-même semble baisser les bras. <br>
+Chaque fleur perd sa couleur, chaque ruisseau sa voix, <br>
+Depuis que ton regard ne guide plus mes pas. <br> <br>
+
+Que ne puis-je atteindre l’horizon où tu respires, <br>
+Là où les songes mêlent leurs soupirs aux zéphyrs ! <br>
+Les étoiles jalouses, qui t’éclairent de loin, <br>
+Me laissent dans l’ombre d’un amour sans témoin. <br> <br>
+
+Mais l’absence, cruelle, renforce mon ardeur, <br>
+Car dans l’écrin de l’âme, je garde ta lueur. <br>
+Rania, ô muse, entends ma plainte fidèle, <br>
+Reviens fleurir ma vie de ta beauté éternelle. <br> <br>
+
+Ainsi je t’attends, immobile et rêveur, <br>
+Comme le lac attend le reflet d’une fleur. <br>
+Et si l’éternité doit nous séparer encore, <br>
+Sache que ton absence est mon plus doux trésor.
+    </p>
+    </div>
+    <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
+</body>
+</html>
