--- a/poem1.html
+++ b/poem1.html
@@ -74,31 +74,51 @@
 </head>
 <body>
     <div class="poem-container">
-    <h1>Échos de ton absence</h1> <!-- Titre du poème -->
-    <p> Ô douce Rania, étoile de mes nuits, <br>
-Ton nom murmure au vent des mélodies infinies. <br>
-L'ombre de ton absence, comme un voile subtil, <br>
-Étreint mon cœur d’un froid, d’un silence hostile. <br> <br>
+    <h1>La mer déchaînée</h1> <!-- Titre du poème -->
+    <p> Quand tu marches, le sol semble même fléchir, <br>
+Le vent cesse un instant, suspendant son soupir. <br>
+Ton regard, clair miroir où se perd ma raison, <br>
+Me happe doucement vers une autre saison. <br> <br>
 
-Les jours s’étirent, pâles, sans ton éclat, <br>
-Le soleil lui-même semble baisser les bras. <br>
-Chaque fleur perd sa couleur, chaque ruisseau sa voix, <br>
-Depuis que ton regard ne guide plus mes pas. <br> <br>
+Chaque mot de ta bouche, harmonieux secret, <br>
+S’écoule dans mon être comme un doux trait. <br>
+Ta voix, rivière lente, apaise mes douleurs, <br> 
+Et laisse en mes veines un parfum de couleurs. <br> <br>
 
-Que ne puis-je atteindre l’horizon où tu respires, <br>
-Là où les songes mêlent leurs soupirs aux zéphyrs ! <br>
-Les étoiles jalouses, qui t’éclairent de loin, <br>
-Me laissent dans l’ombre d’un amour sans témoin. <br> <br>
+Hélas, qui suis-je, moi, pour prétendre à ta flamme, <br>
+Moi dont l’espoir tremblant vacille sous mon âme ? <br>
+Car en toi tout s’unit, grandeur et majesté, <br>
+Et face à ton éclat, je perds ma fierté. <br> <br>
 
-Mais l’absence, cruelle, renforce mon ardeur, <br>
-Car dans l’écrin de l’âme, je garde ta lueur. <br>
-Rania, ô muse, entends ma plainte fidèle, <br>
-Reviens fleurir ma vie de ta beauté éternelle. <br> <br>
+Je voudrais dans tes yeux lire un élan fragile, <br>
+Un soupçon d'émotion, d'une tendresse agile. <br>
+Mais ton calme serein, ton air presque distant, <br>
+Me laissent désarmé, en mon trouble constant. <br> <br>
 
-Ainsi je t’attends, immobile et rêveur, <br>
-Comme le lac attend le reflet d’une fleur. <br>
-Et si l’éternité doit nous séparer encore, <br>
-Sache que ton absence est mon plus doux trésor.
+Oserai-je un jour te dire en frémissant <br>
+Les feux que ton regard attise en mon sang ? <br> 
+Ou faudra-t-il, soumis à ce destin sévère, <br>
+Aimer dans le silence, et pleurer sans lumière ? <br> <br>
+
+Car toi, dans chaque geste, es douce et souveraine, <br>
+Chaque pas, chaque rire à ma vie se déchaîne. <br>
+Tu es l’onde paisible et la mer en furie, <br>
+Le murmure apaisant d’une âme attendrie. <br> <br>
+
+Et pourtant, même en toi réside un doux mystère, <br>
+Un voile qui me cache une part d'orages et de tonnerre. <br>
+Que vois-tu, quand tu ris, dans les vagues du temps ? <br>
+Ton esprit me devance, il est déjà distant. <br> <br>
+
+Si un jour, par hasard, ton regard se penchait, <br>
+Et voyait dans mes yeux ce que le cœur cachait, <br>
+Alors, peut-être enfin, ta chaleur infinie, <br>
+Donnerait à mon âme une douce harmonie. <br> <br>
+
+Mais si tu demeures loin, par orgueil ou mépris, <br>
+Sache que dans mon cœur ton image a fleuri. <br>
+Et qu’en moi, jusqu’au bout, restera ce tourment  <br>
+Aimer sans être vu, mourir en t'honorant.
     </p>
     </div>
     <a href="poems.html" class="btn">Retour au sommaire</a> <!-- Bouton de retour -->
