--- a/poems.html
+++ b/poems.html
@@ -40,7 +40,7 @@
         <!-- Ajout du conteneur scrollable -->
         <div class="poem-list-container">
             <ul class="poem-list">
-                <li><a href="poem1.html">[Nouveau]Échos de ton absence</a></li>
+                <li><a href="poem1.html">[Nouveau]La mer déchaînée</a></li>
                 <li><a href="poem2.html">Aldébaran</a></li>
                 <li><a href="poem3.html">Une esquisse pour une reine</a></li>
                 <li><a href="poem4.html">Je ne t'aime pas</a></li>
@@ -70,6 +70,7 @@
                 <li><a href="poem28.html">Un poème pour Rania</a></li>
                 <li><a href="poem29.html">L'impuissance du poète</a></li>
                 <li><a href="poem30.html">Au pied d'une feuille</a></li>
+                <li><a href="poem31.html">Echos de ton absence</a></li>
             </ul>
         </div>
     </div>
